--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,53 +1,16 @@
 <!-- Footer -->
 <footer class="footer" id="resources">
     <div class="container">
-      <!-- Website Logo -->
-      <div class="logo">
-        <a href="#">
-          <img src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/logo.svg" alt="" />
-        </a>
-      </div>
-      <!-- Quick Links -->
-      <div class="quick-links">
-        <div class="links-group">
-          <span>Features</span>
-          <div>
-            <a href="#">Link Shortening</a>
-            <a href="#">Branded Links</a>
-            <a href="#">Analytics</a>
-          </div>
-        </div>
-        <div class="links-group">
-          <span>Resources</span>
-          <div>
-            <a href="#">Blog</a>
-            <a href="#">Developers</a>
-            <a href="#">Support</a>
-          </div>
-        </div>
-        <div class="links-group">
-          <span>Company</span>
-          <div>
-            <a href="#">About</a>
-            <a href="#">Our Team</a>
-            <a href="#">Careers</a>
-            <a href="#">Contact</a>
-          </div>
-        </div>
-      </div>
       <!-- Social Media -->
       <div class="social-media">
         <a href="https://www.facebook.com/fablabtanger/">
-          <img src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-facebook.svg" alt="Facebook Logo">
+          <img src="../../assets/images/facebook-3-24.png" alt="Facebook Logo">
         </a>
         <a href="https://www.linkedin.com/company/greenlab-fablab-tanger/">
-          <img src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-twitter.svg" alt="Twitter Logo">
-        </a>
-        <a href="#">
-          <img src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-pinterest.svg" alt="Pinterest Logo">
+          <img src="../../assets/images/linkedin-6-24.png" alt="Linkedin Logo">
         </a>
         <a href="https://www.instagram.com/fablabtanger/">
-          <img src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-instagram.svg" alt="Instagram Logo">
+          <img src="../../assets/images/instagram.png" alt="Instagram Logo">
         </a>
       </div>
     </div>
