--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
   <!-- Landing -->
   <section class="landing">
     <div class="landing-text">
-      <h1>Plus qu'un club, c'est une culture.</h1>
+      <h1>Plus qu'un club, c'est une communauté.</h1>
       <p>
         Qu'est-ce que vous attendez ? Rejoignez dès maintenant notre club et profitez de nos différentes formations.
       </p>
@@ -18,7 +18,7 @@
       <div class="url-shorten-feature">
         <form class="url-shorten-form" id="url-shorten-form">
             <div class="section-header">
-                <h2 style="color:white">Advanced Statistics</h2>
+                <h2 style="color:white">Nos formations actuelles.</h2>
             </div>
         </form>
         <div class="url-shorten-results"></div>
@@ -27,46 +27,40 @@
       <div class="more-features">
         <div class="section-header">
           <p>
-            Track how your links are performing across the web with our
-            advanced statistics dashboard.
+            Inscrivez-vous à GreenLab et bénéficiez des réductions sur nos formations certifiées.
           </p>
         </div>
         <div class="more-features-content">
           <div class="feature">
             <div class="feature-illustration">
-              <img src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-brand-recognition.svg" alt="Feature Illustration Icon" />
+              <img src="../../assets/images/DS-CATIA-Logo.png" alt="Feature Illustration Icon" />
             </div>
             <div class="feature-details">
-              <h3>Brand Recognition</h3>
+              <h3>CATIA</h3>
               <p>
-                Boost your brand recognition with each click. Generic links
-                don’t mean a thing. Branded links help instil confidence in
-                your content.
+                CATIA est un logiciel de conception assistée par ordinateur (CAO) créé au départ par la société Dassault Aviation pour ses propres besoins sous le nom de CATI. La compagnie Dassault Systèmes fut créée en 1981 pour en assurer le développement et la maintenance sous le nom de CATIA, IBM en assurant la commercialisation.
               </p>
             </div>
           </div>
           <div class="feature">
             <div class="feature-illustration">
-              <img src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-detailed-records.svg" alt="Feature Illustration Icon" />
+              <img src="../../assets/images/Illustrator.png" alt="Feature Illustration Icon" />
             </div>
             <div class="feature-details">
-              <h3>Detailed Records</h3>
+              <h3>ILLUSTRATOR</h3>
               <p>
-                Gain insights into who is clicking your links. Knowing when
-                and where people engage with your content helps inform
-                better decisions.
+                Adobe Illustrator est un logiciel de création graphique vectorielle. Il fait partie de la gamme Adobe, peut être utilisé indépendamment ou en complément de Photoshop, et offre des outils de dessin vectoriel puissants. Les images vectorielles sont constituées de courbes générées par des formules mathématiques.
               </p>
             </div>
           </div>
           <div class="feature">
             <div class="feature-illustration">
-              <img src="https://raw.githubusercontent.com/MohamedAridah/frontendmentor_url-shortening-api/main/images/icon-fully-customizable.svg" alt="Feature Illustration Icon" />
+              <img src="../../assets/images/python.png" alt="Feature Illustration Icon" />
             </div>
             <div class="feature-details">
-              <h3>Fully Customizable</h3>
+              <h3>PYTHON</h3>
               <p>
-                Improve brand awareness and content discoverability through
-                customizable links, supercharging audience engagement.
+                Python est un langage de programmation interprété, multi-paradigme et multiplateformes. Il favorise la programmation impérative structurée, fonctionnelle et orientée objet. Il est doté d'un typage dynamique fort, d'une gestion automatique de la mémoire par ramasse-miettes et d'un système de gestion d'exceptions ; il est ainsi similaire à Perl, Ruby, Scheme, Smalltalk et Tcl.
               </p>
             </div>
           </div>
@@ -74,12 +68,12 @@
       </div>
     </div>
   </section>
-  <!-- Pricing -->
+  <!-- Contactez-nous -->
   <section class="pricing" id="pricing">
     <div class="container">
       <div class="section-header">
-        <h2>Boost your links today</h2>
-        <a href="#" class="btn btn-lg">Get Started</a>
+        <h2>Pour toute autre information, n'hésitez pas.</h2>
+        <a href="mailto:greenlabfst@gmail.com" class="btn btn-lg">Contactez-nous</a>
       </div>
     </div>
   </section>
