--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,6 @@
     <div class="container flex-between">
       <div class="logo">
         <a href="#">
-          <!-- <img src="../../assets/images/greenlab.jpg" alt="" /> -->
           <span><h1>GreenLab</h1></span>
         </a>
       </div>
@@ -10,7 +9,7 @@
         <div class="nav-links">
           <a routerLink="/">Page d'acceuil</a>
           <a routerLink="/Create">Créer une formation</a>
-          <a routerLink="/Download">Télécharger vos certificat</a>
+          <a routerLink="/Download">Télécharger vos certificats</a>
         </div>
         <div class="nav-buttons">
           <a href="#" class="log-in">Connexion</a>
