--- a/src/app/certificate-download/certificate-download.component.html
+++ b/src/app/certificate-download/certificate-download.component.html
@@ -1,1 +1,22 @@
-<p>certificate-download works!</p>
+  <!-- Landing -->
+  <section class="landing">
+    
+</section>
+<!-- Features -->
+<section class="features" id="features">
+  <div class="container">
+    <!-- Short URL Feature -->
+    <div class="url-shorten-feature">
+      <form class="url-shorten-form" id="url-shorten-form">
+          <div class="section-header">
+              <!-- <h2 style="color:white">Nos formations actuelles.</h2> -->
+          </div>
+      </form>
+      <div class="url-shorten-results"></div>
+    </div>
+    <!-- Advanced Features -->
+    <div class="more-features">
+      
+    </div>
+  </div>
+</section>
