--- a/src/app/certificate-generate/certificate-generate.component.html
+++ b/src/app/certificate-generate/certificate-generate.component.html
@@ -1,1 +1,27 @@
-<p>certificate-generate works!</p>
+  <!-- Landing -->
+  <section class="landing">
+    <div class="landing-text">
+      <h1>Créer la formation et générer vos certificats.</h1>
+      <!-- <p>
+        Qu'est-ce que vous attendez ? Rejoignez dès maintenant notre club et profitez de nos différentes formations.
+      </p> -->
+      <a href="#url-shorten-form" class="btn btn-lg">Nos formations</a>
+    </div>
+  <!-- Features -->
+  <section class="features" id="features">
+    <div class="container">
+      <!-- Short URL Feature -->
+      <div class="url-shorten-feature">
+        <form class="url-shorten-form" id="url-shorten-form">
+            <div class="section-header">
+                <!-- <h2 style="color:white">Nos formations actuelles.</h2> -->
+            </div>
+        </form>
+        <div class="url-shorten-results"></div>
+      </div>
+      <!-- Advanced Features -->
+      <div class="more-features">
+        
+      </div>
+    </div>
+  </section>
