--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,13 @@
 <!-- Footer -->
+<!-- Contactez-nous -->
+<section class="pricing" id="pricing">
+    <div class="container">
+      <div class="section-header">
+        <h2>Pour toute autre information, n'hésitez pas.</h2>
+        <a href="mailto:greenlabfst@gmail.com" class="btn btn-lg">Contactez-nous</a>
+      </div>
+    </div>
+</section>
 <footer class="footer" id="resources">
     <div class="container">
       <!-- Social Media -->
