--- a/src/app/certificate-generate/certificate-generate.component.html
+++ b/src/app/certificate-generate/certificate-generate.component.html
@@ -3,91 +3,48 @@
     <div class="landing-text">
       <h1>Créer la formation et générer vos certificats.</h1>
       
-      <a href="" class="btn btn-lg">Créer maintenant</a>
+      <a href="" class="btn btn-lg" id="box">Créer maintenant</a>
     </div>
   </section>
   <!-- Our form -->
-  <section class="features" id="features">
+  <section>
     <div class="container">
-    <div class="ctrlqFormContent">
-
-        <form>  
-
-        <div class="row">
-            <div class="input-field col s12">
-            <h4>Candidate Interview Form</h4>
-            <p>All fields are required</p>
+        <form>
+            <div id="form-main-container">
+            <div id="form-area">
+              <div id="form-title">
+              Payment online
+              </div>
+              <div id="form-body">
+                <div>
+                  <div class="col-12">
+                    <fieldset class="form-group">
+                      <label class="form-label" for="input4">Input</label>
+                      <input type="text" class="form-control" id="input4" placeholder="Input" required>
+                    </fieldset>
+                  </div>
+                  <div class="col-12">
+                    <fieldset class="form-group">
+                      <label class="form-label" for="input5">Input</label>
+                      <input type="text" class="form-control" id="input5" placeholder="Input" required>
+                    </fieldset>
+                  </div>
+                  <div class="col-12">
+                    <fieldset class="form-group">
+                      <label class="form-label" for="input6">Input</label>
+                      <input type="text" class="form-control" id="input6" placeholder="Input" required>
+                    </fieldset>
+                  </div>
+                </div>
+                <div>
+                  <div class="center-text button-area">
+                    <button type="button" class="btn btn-cancel">Cancel</button>
+                  </div>
+                 
+                </div>
+              </div>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="input-field col s12">
-            <label for="name">Your Name</label>
-            <input id="name" name="name" type="text" class="validate" data-error="#e1" required>
-            <div id="e1"></div>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="input-field col s12">
-            <label for="email">Your Email</label>
-            <input id="email" name="email" type="text" class="validate" data-error="#e2" required>
-            <div id="e2"></div>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="input-field col s12">
-            <label for="email">Your Email</label>
-            <input id="email" name="email" type="text" class="validate" data-error="#e2" required>
-            <div id="e2"></div>
-            </div>
-        </div>
-        <br>
-        
-
-
-        <div class="row">
-            <div class="input-field col s12">
-            <label for="birthdate">Date of Birth</label>
-            <input type="date" id="birthdate" class="datepicker" name="birthdate" data-error="#e5" required>
-            <div id="e5"></div>
-            </div>
-        </div>
-
-        <br>
-        <div class="row">
-            <div class="input-field col s12">
-            <textarea id="bio" name="bio" class="materialize-textarea" data-error="#e6" required></textarea>
-            <label for="bio">Short Bio</label>
-            <div id="e6"></div>
-            </div>
-        </div>
-        <br>
-        
-
-        <div class="row">
-            <div class="file-field input-field col s12">
-            <div class="btn">
-                <span>Browse</span>
-                <input type="file" data-error="#e9" required>
-            </div>
-            <div class="file-path-wrapper">
-                <input class="file-path validate" type="text" placeholder="Select a file to upload">
-            </div>
-            <div class="input-field">
-                <div id="e9"></div>
-            </div>
-            </div>
-        </div>      
-        <div class="row">
-            <div class="input-field col m6 s12">
-            <button type="submit" class="waves-effect waves-light btn-large"><i class="material-icons right">backup</i>Submit</button>
-            </div>
-        </div>
-
-        </form>
-
-    </div>
+          </div>
+          </form>
     </div>
 </section>
