--- a/src/assets/css/style1.css
+++ b/src/assets/css/style1.css
@@ -1,82 +1,290 @@
-  
-  form p {
-    font-size: 120%;
-  }
-  
-  .ctrlqHeaderMast {
-    height: 278px;
-    background: #009688;
-  }
-  
-  .ctrlqFormContent {
-    color: rgba(0,0,0,.87);
-    padding: 20px 35px
-  }
-  
-  .ctrlqFormContentWrapper {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    box-orient: vertical;
-    -webkit-flex-direction: column;
-    flex-direction: column
-  }
-  
-  .ctrlqAccent {
-    background-color: #a7ffeb;
-    height: 8px;
-  }
-  .ctrlqCenteredContent {
-    margin: auto;
-    width: 600px; 
-  }
-  .ctrlqFormCard {
-    background-color: #fff;
-    margin-bottom: 48px;
-    -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37);
-    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37);
-    word-wrap: break-word
-  }
-  
-  .ctrlqFormCard:first-of-type {
-    margin-top: -100px
-  }
-  
-  .ctrlqHeaderTitle {
-    -webkit-box-sizing: border-box;
+    *,
+  *:after,
+  *:before {
     box-sizing: border-box;
-    font-size: 34px;
-    line-height: 135%;
-    max-width: 100%;
-    min-width: 0%;
-    margin-bottom: 22px
   }
-  
-  @media (max-width: 660px) {
-    .ctrlqHeaderMast {
-      height: 122px;
-    }
-    .ctrlqFormCard:first-of-type {
-      margin-top: -50px;
-    }
-  
-    .ctrlqCenteredContent {
-      width: 90%;
-    }
+  .center-text{
+    text-align:center;
   }
-  
-  div.error {
+  #form-main-container {
+    display: block;
     position: relative;
-    top: -1rem;
-    left: 0rem;
-    font-size: 0.8rem;
-    color: #FF4081;
-    -webkit-transform: translateY(0%);
-    -ms-transform: translateY(0%);
-    -o-transform: translateY(0%);
-    transform: translateY(0%);
+    background-color: #eff0f5;
+    border-color: #d8e2e7;
+    border: 1px solid #e5e5e5;
+    border-radius: .25rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    padding: 1%;
   }
   
+  #tabs {
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+    font-weight: 300;
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  
+  #tabs ul {
+    position: relative;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -webkit-box;
+    display: flex;
+    margin: 0 auto;
+    padding: 0;
+    max-width: 90%;
+    list-style: none;
+    -webkit-box-orient: horizontal;
+    -webkit-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+  
+  #tabs ul li {
+    position: relative;
+    display: block;
+    width: 100%;
+    margin: 0.5%;
+    padding: 1%;
+    text-align: center;
+    flex: 1;
+    z-index: 1;
+    border-radius: 2%;
+  }
+  
+  #tabs ul li a {
+    position: relative;
+    display: block;
+    color: #343434;
+    overflow: visible;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    transition: border 0.5s;
+    white-space: nowrap;
+    line-height: 2.5;
+    text-decoration: none;
+    outline: none;
+  }
+  
+  #tabs ul li a:hover {
+    border-bottom: 1px solid rgba(0, 0, 0, 1);
+    transition: border 0.5s;
+  }
+  
+  #tabs ul li.active-tab a:before {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border: solid transparent;
+    content: '';
+    pointer-events: none;
+    border-width: 1rem;
+    border-top-color: rgba(0, 0, 0, 0.2);
+    margin-left: -1rem;
+    transition: border 0.5s;
+  }
+  
+  #tabs ul li.active-tab a:hover:before {
+    border-top-color: rgba(0, 0, 0, 0.5);
+    transition: border 0.5s;
+  }
+  
+  #tabs ul li.active-tab a:after {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border: solid transparent;
+    content: '';
+    pointer-events: none;
+    border-width: 0.9rem;
+    border-top-color: #fff;
+    margin-left: -0.9rem;
+  }
+  
+  #form-area {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    font-weight: 300;
+    font-size: 1.2rem;
+    margin: 1rem;
+    margin-top: 2rem;
+  }
+  
+  #form-title {
+    border-bottom: solid 1px #d8e2e7;
+    padding-bottom: .8rem;
+    width: 97%;
+    font-weight:600;
+    color:#2acfcf;
+  }
+  
+  #form-body {
+    margin-top: 2rem;
+  }
+  
+  .col-3 {
+    float: left;
+    width: 30%;
+    margin: 1%;
+    padding: 1%;
+  }
+  
+  .col-6 {
+    display: inline-block;
+    width: 62.5%;
+    margin: 1%;
+    padding: 1%;
+  }
+  
+  .col-12 {
+    display: inline-block;
+    width: 95%;
+    margin: 1%;
+    padding: 1%;
+  }
+  
+  .col-2 {
+    display: inline-block;
+    width: 17%;
+    margin: 1%;
+    padding: 1%;
+  }
+  
+  .row {
+    display: block;
+    margin: 2%;
+    margin-top: 0;
+    padding: 2%;
+    padding-top: 0;
+  }
+  
+  .left-align {
+    float: left;
+  }
+  
+  .right-align {
+    float: right;
+  }
+  
+  .button-area {
+    margin-top: 1%;
+    margin-right: 5%;
+    margin-left: 1%;
+    padding: 2%;
+  }
+  
+  .button-save-area {
+    margin-top: 1%;
+    margin-left: 10%;
+    padding: 2%;
+  }
+  
+  .form-group {
+    margin-bottom: 0.2rem;
+  }
+  
+  fieldset {
+    border: 0;
+    padding: 0;
+  }
+  
+  .form-label {
+    display: block;
+    margin-bottom: 6px;
+    font-size: 1rem;
+  }
+  
+  label {
+    margin: 0;
+    display: block;
+  }
+  
+  .form-control {
+    box-shadow: none;
+    font-size: 1rem;
+    color: #343434!important;
+    width: 100%;
+    padding: .375rem .75rem;
+    line-height: 1.5;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    -webkit-border-radius: .25rem;
+    border-radius: .25rem;
+  }
+  
+  textarea {
+    resize: none;
+    border: 0.1rem solid #ccc;
+    border-radius: 0.25rem;
+    width: 100%;
+  }
+  
+  /* .btn {
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    border: 1px solid #00a8ff;
+    background: #00a8ff;
+    color: #fff;
+    font-weight: 600;
+    display: inline-block;
+    padding: .375rem 1rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+  } */
+  
+  .btn-cancel {
+    background-color: #2acfcf;
+    border-color: #2acfcf;
+    border-radius: 3px;
+    color: #fff;
+    font-weight: 600;
+    display: inline-block;
+    padding: .375rem 1rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+  }
+  
+  .btn-send {
+    background-color: #6b7a85;
+    border-color: #6b7a85;
+  }
+  
+  .btn-save {
+    background-color: #6b7a85;
+    border-color: #6b7a85;
+  }
+  label{
+    color:#777;
+    font-weight:600;
+    text-transform:camel;
+  }
+  .form-control{
+    color:#777 !important;
+  }
