Last front commit

--- a/src/app/certificate-download/certificate-download.component.html
+++ b/src/app/certificate-download/certificate-download.component.html
@@ -1,22 +1,39 @@
   <!-- Landing -->
   <section class="landing">
-    
-</section>
-<!-- Features -->
-<section class="features" id="features">
-  <div class="container">
-    <!-- Short URL Feature -->
-    <div class="url-shorten-feature">
-      <form class="url-shorten-form" id="url-shorten-form">
-          <div class="section-header">
-              <!-- <h2 style="color:white">Nos formations actuelles.</h2> -->
-          </div>
-      </form>
-      <div class="url-shorten-results"></div>
-    </div>
-    <!-- Advanced Features -->
-    <div class="more-features">
+    <div class="landing-text">
+      <h2>Télécharger ou envoyez vos certificats par mail.</h2>
       
+      <a routerLink="Download" class="btn btn-lg">Récupèrer dès maintenant</a>
     </div>
-  </div>
-</section>
+  </section>
+<!-- Features -->
+<table>
+    <thead>
+        <tr>
+            <th>Prénom</th>
+            <th>Nom</th>
+            <th>Email</th>
+            <th></th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>
+                <button class="btn btn-lg">Télécharger</button>
+            </td>
+            <td>
+                <button class="btn btn-lg">Envoyer par mail</button>
+            </td>
+        </tr>
+
+    </tbody>
+    <tfoot>
+        <td colspan="5" class="tablefoot"></td>
+    </tfoot>
+</table>
+<br><br>
