--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -908,3 +908,49 @@ img {
   filter: none;
   background-color: none;
 }
+/* aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa */
+table {
+  width: 700px;
+  text-align: center;
+  border: 1px solid #fff;
+  border-spacing: 1px;
+  font-family: 'Cairo', sans-serif;
+  margin: auto;
+}
+
+caption {
+  font-weight: bold;
+}
+
+table td {
+  padding: 10px;
+  background-color: #eff0f5;
+}
+
+table th {
+  background-color: #232127;
+  color: #fff;
+  padding: 10px;
+}
+
+
+.view,
+.delete {
+  border: none;
+  padding: 5px 10px;
+  color: #fff;
+  font-weight: bold;
+}
+
+.view {
+  background-color: #2acfcf;
+}
+
+.delete {
+  background-color: #2acfcf;
+}
+
+.tablefoot {
+  padding: 0;
+  border-bottom: 3px solid #fff;
+}
